--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@
 
 body{
   background: rgb(49, 47, 47);
+  overflow-x: hidden;
 }
 
 .container{
-  width: 100%;
   max-width: 1200px;
   margin: 40px auto;
   margin-bottom:20px;
@@ -15,11 +15,14 @@ body{
 
 .flex-container1 {
   display: flex;
-  position: relative;
+  position: absolute;
+  width:100%;
   z-index:2;
+  padding:10px;
 }
 
 .flex-container2 {
+  padding:10px;
   display: flex;
   position: absolute;
   width:100%;
@@ -29,19 +32,28 @@ body{
 h1{
   color: white;
   text-align: center;
+  font-size: 35px!important;
+}
+
+.back{
+  display: block;
+  width:20%;
+  height:130px;
+  margin-right:10px;
+  text-align: center;
+  padding:20px 0;
 }
 
 img{
-  line-height: 0;
-  width:25%;
+  width:50%;
+  height:80px;
 }
 
 
 .front{
-  background-color: #f1f1f1;
-  font-size: 30px;
-  width:25%;
-  height:300px;
+  width:20%;
+  height:130px;
+  margin-right:10px;
   cursor: pointer;
   box-shadow: 0 4px 8px 0 rgba(21, 42, 138, 0.452), 0 6px 20px 0 rgba(21, 42, 138, 0.452);
 }
