--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ h1{
 img{
   width:50%;
   height:80px;
+  border-radius: 10px;
 }
 
 
@@ -55,6 +56,7 @@ img{
   height:130px;
   margin-right:10px;
   cursor: pointer;
+  border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(21, 42, 138, 0.452), 0 6px 20px 0 rgba(21, 42, 138, 0.452);
 }
 
@@ -83,19 +85,20 @@ h1{
 }
 #pop-up{
   position: absolute;
-  width: 600px; 
+  width: 80%; 
   text-align: center;
   top:-400px;
-  left:300px;
+  left:10%;
   z-index: 3;
 }
-#pop-up .container{
+#pop-up .container1{
   background: #363636; 
   padding: 40px; 
   position: absolute; 
   top: 50px; 
   width: 100%; 
   box-sizing: border-box;
+  height:180px;
 }
 .cross{
   position: absolute;
@@ -121,7 +124,8 @@ h1{
 }
 
 .animateAvatar{
-  transform: translateX(170px);
+  position: absolute;
+  left:10%;
   animation: moveAvatar 2s 0.5s linear forwards infinite alternate;
 }
 
@@ -141,13 +145,13 @@ h1{
 @keyframes moveAvatar{
   0%{
     opacity: 1;
-    transform: translateX(-200px);
+    left:10%;
   }
   50%{
     opacity: 0;
   }
   100%{
     opacity: 1;
-    transform: translateX(170px);
+    left:85%;
   }
 }
