--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ h1 {
   height: 130px;
   margin-right: 10px;
   text-align: center;
-  padding: 20px 0;
   transform: rotateY(90deg);
 }
 
@@ -48,6 +47,7 @@ img {
   width: 50%;
   height: 80px;
   border-radius: 10px;
+  margin:10%;
 }
 
 
@@ -57,6 +57,7 @@ img {
   margin-right: 10px;
   cursor: pointer;
   border-radius: 10px;
+  transform: rotateY(0deg);
   box-shadow: 0 4px 8px 0 rgba(21, 42, 138, 0.452), 0 6px 20px 0 rgba(21, 42, 138, 0.452);
 }
 
@@ -74,10 +75,12 @@ img {
 @keyframes flip {
   0% {
     transform: rotateY(0deg);
+    opacity:1;
   }
 
   100% {
     transform: rotateY(90deg);
+    opacity:0;
   }
 }
 
