--- a/css/style.css
+++ b/css/style.css
@@ -1,103 +1,117 @@
-
 /*---------------------------------------------------Flip Card-------------------------------------------------------------------*/
 
-body{
+body {
   background: rgb(49, 47, 47);
   overflow-x: hidden;
 }
 
-.container{
+.container {
   max-width: 1200px;
   margin: 40px auto;
-  margin-bottom:20px;
+  margin-bottom: 20px;
   position: relative;
 }
 
 .flex-container1 {
   display: flex;
   position: absolute;
-  width:100%;
-  z-index:2;
-  padding:10px;
+  width: 100%;
+  z-index: 2;
+  padding: 10px;
 }
 
 .flex-container2 {
-  padding:10px;
+  padding: 10px;
   display: flex;
   position: absolute;
-  width:100%;
-  z-index:1;
+  width: 100%;
+  z-index: 1;
 }
 
-h1{
+h1 {
   color: white;
   text-align: center;
-  font-size: 35px!important;
+  font-size: 35px !important;
 }
 
-.back{
+.back {
   display: block;
-  width:20%;
-  height:130px;
-  margin-right:10px;
+  width: 20%;
+  height: 130px;
+  margin-right: 10px;
   text-align: center;
-  padding:20px 0;
+  transform: rotateY(90deg);
 }
 
-img{
-  width:50%;
-  height:80px;
+img {
+  width: 50%;
+  height: 80px;
+  border-radius: 10px;
+  margin:10%;
 }
 
 
-.front{
-  width:20%;
-  height:130px;
-  margin-right:10px;
+.front {
+  width: 20%;
+  height: 130px;
+  margin-right: 10px;
   cursor: pointer;
+  border-radius: 10px;
+  transform: rotateY(0deg);
   box-shadow: 0 4px 8px 0 rgba(21, 42, 138, 0.452), 0 6px 20px 0 rgba(21, 42, 138, 0.452);
 }
 
 
 /*-------------------------------------------------------Animation for Flip Card------------------------------------------------*/
 
-.flipfront{
+.flipfront {
   animation: flip 0.1s linear forwards;
 }
 
-@keyframes flip{
-  0%{
+.flipback {
+  animation: flip 0.1s 0.1s linear forwards reverse;
+}
+
+@keyframes flip {
+  0% {
     transform: rotateY(0deg);
+    opacity:1;
   }
-  100%{
+
+  100% {
     transform: rotateY(90deg);
+    opacity:0;
   }
 }
 
 
 /*-----------------------------------------------------------victory-------------------------------------------------------------*/
 
-h1{
+h1 {
   font-size: 48px;
   margin: 10px 0;
 }
-#pop-up{
+
+#pop-up {
   position: absolute;
-  width: 600px; 
+  width: 80%;
   text-align: center;
-  top:-400px;
-  left:300px;
+  top: -400px;
+  left: 10%;
   z-index: 3;
 }
-#pop-up .container{
-  background: #363636; 
-  padding: 40px; 
-  position: absolute; 
-  top: 50px; 
-  width: 100%; 
+
+#pop-up .container1 {
+  background: #363636;
+  padding: 40px;
+  position: absolute;
+  top: 50px;
+  width: 100%;
   box-sizing: border-box;
+  height: 180px;
 }
-.cross{
+
+.cross {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -110,25 +124,49 @@ h1{
   cursor: pointer;
 }
 
-.cross:hover i{
-  color:red;
+.cross:hover i {
+  color: red;
 }
 
 /*--------------------------------------------------------Animation for Victory----------------------------------------------------*/
 
-.animate{
-  animation:drop 0.5s ease forwards;
+.animate {
+  animation: drop 0.5s ease forwards;
 }
 
-@keyframes drop{
-  0%{
+.animateAvatar {
+  position: absolute;
+  left: 10%;
+  animation: moveAvatar 2s 0.5s linear forwards infinite alternate;
+}
+
+@keyframes drop {
+  0% {
     opacity: 0;
   }
-  70%{
+
+  70% {
     transform: translateY(700px);
   }
-  100%{
+
+  100% {
     transform: translateY(500px);
     opacity: 1;
+  }
+}
+
+@keyframes moveAvatar {
+  0% {
+    opacity: 1;
+    left: 10%;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+    left: 85%;
   }
 }
