--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ h1 {
   height: 130px;
   margin-right: 10px;
   text-align: center;
-  transform: rotateY(90deg);
+  transform: rotateY(0deg);
 }
 
 img {
@@ -57,6 +57,7 @@ img {
   margin-right: 10px;
   cursor: pointer;
   border-radius: 10px;
+  opacity: 0.5;
   transform: rotateY(0deg);
   box-shadow: 0 4px 8px 0 rgba(21, 42, 138, 0.452), 0 6px 20px 0 rgba(21, 42, 138, 0.452);
 }
@@ -134,6 +135,10 @@ h1 {
   animation: drop 0.5s ease forwards;
 }
 
+.glow-green{
+  animation : glow-green 2s 0.5s ease-in forwards infinite;
+}
+
 .animateAvatar {
   position: absolute;
   left: 10%;
@@ -152,6 +157,24 @@ h1 {
   100% {
     transform: translateY(500px);
     opacity: 1;
+  }
+}
+
+@keyframes glow-green {
+  0%{
+    box-shadow: 4px 4px 50px rgba(49, 231, 13, 0.411);
+  }
+  25%{
+    box-shadow: 4px 4px 50px rgba(49, 231, 13, 0.568);
+  }
+  50%{
+    box-shadow: 4px 4px 50px rgba(49, 231, 13, 0.733);
+  }
+  75%{
+    box-shadow: 4px 4px 50px rgba(49, 231, 13, 0.815);
+  }
+  100%{
+    box-shadow: 4px 4px 50px rgba(49, 231, 13, 0.87);
   }
 }
 
