--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,10 @@ h1 {
   color: red;
 }
 
+#glow{
+  cursor:move;
+}
+
 /*--------------------------------------------------------Animation for Victory----------------------------------------------------*/
 
 .animate {
